--- a/index.html
+++ b/index.html
@@ -73,30 +73,32 @@
     </div>
 
     <!-- Kemampuan -->
-    <div class="container-fluid py-5" id="skill-main-container">
-      <div class="row">
-        <!-- Skill picture -->
-        <div class="col-xl-6 col-sm-12 d-flex justify-content-start align-items-center p-5">
-            <img src="./assets/kemampuan.jpg" id="skill-picture" alt="">
-        </div>
-        <div class="col-xl-6 col-sm-12 d-flex justify-content-xl-center justify-content-sm-start align-items-center px-5">
-          <div id="skills-container">
-            <!-- Skill Headline -->
-            <hr class="hr-3" style="height: 10px;">
-            <h1 class="title-2">Kemampuan</h1>
-  
-            <!-- Skill List -->
-            <div class="d-flex align-items-center py-3">
-              <img src="./assets/html-icon.png" class="skill-item-picture" alt="">
-              <p class="skill-title ps-3">HTML</p>
-            </div>
-            <div class="d-flex align-items-center py-3">
-              <img src="./assets/css-icon.png" class="skill-item-picture" alt="">
-              <p class="skill-title ps-3">CSS</p>
-            </div>
-            <div class="d-flex align-items-center py-3">
-              <img src="./assets/bootstrap-icon.png" class="skill-item-picture" alt="">
-              <p class="skill-title ps-3">Bootstrap</p>
+    <div id="kemampuan">
+      <div class="container-fluid py-5" id="skill-main-container">
+        <div class="row">
+          <!-- Skill picture -->
+          <div class="col-xl-6 col-sm-12 d-flex justify-content-start align-items-center p-5">
+              <img src="./assets/kemampuan.jpg" id="skill-picture" alt="">
+          </div>
+          <div class="col-xl-6 col-sm-12 d-flex justify-content-xl-center justify-content-sm-start align-items-center px-5">
+            <div id="skills-container">
+              <!-- Skill Headline -->
+              <hr class="hr-3" style="height: 10px;">
+              <h1 class="title-2">Kemampuan</h1>
+    
+              <!-- Skill List -->
+              <div class="d-flex align-items-center py-3">
+                <img src="./assets/html-icon.png" class="skill-item-picture" alt="">
+                <p class="skill-title ps-3">HTML</p>
+              </div>
+              <div class="d-flex align-items-center py-3">
+                <img src="./assets/css-icon.png" class="skill-item-picture" alt="">
+                <p class="skill-title ps-3">CSS</p>
+              </div>
+              <div class="d-flex align-items-center py-3">
+                <img src="./assets/bootstrap-icon.png" class="skill-item-picture" alt="">
+                <p class="skill-title ps-3">Bootstrap</p>
+              </div>
             </div>
           </div>
         </div>
@@ -140,7 +142,7 @@
       <div class="p-3">
         <div class="row">
           <div class="col-md-6 d-flex justify-content-center align-items-center">
-            Copyright © 2021 John Doe. All rights Reserved.
+            Copyright © 2023 John Doe. All rights reserved.
           </div>
           <div class="col-md-6 d-flex justify-content-center align-items-center">
             <a href="https://www.linkedin.com">
